--- a/math_24/index.html
+++ b/math_24/index.html
@@ -11,4 +11,9 @@
 <p>我的第一个段落。</p>
  
 </body>
+ <form action="demo_form.php">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  <input type="submit" value="提交">
+</form>
 </html>
